[package]
name = "stress_tester"
version = "0.1.0"
authors = ["Alexey Larionov <alxs.larionov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
url = "2.1"
clap = "3.0.0-beta.1"
structopt = "0.3"