[package]
name = "stress_tester"
version = "0.1.0"
authors = ["Alexey Larionov <alxs.larionov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1"
clap = "3.0.0-beta.1"
tokio = "0.2"
num = "0.3"
reqwest = { version = "0.10", features = ["blocking"] }