[package]
name = "stress_tester"
version = "0.1.0"
authors = ["Alexey Larionov <alxs.larionov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
url = "2.1"
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["macros", "blocking", "rt-core", "rt-threaded"] }
num = "0.3"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
rand = "0.7"
csv = "1.1"
futures = "0.3"
itertools = "0.9"
async-std = { version = "1.6", features = ["unstable"] }